# 2024-lab08-Semrah-Elmir

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  can.c  canhighpriority.c  canrecieveonly.c
